--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <title>app</title>
   </head>
   <body>
+    <div id="root"></div>
     <script src="/static/bundle.js"></script>
   </body>
 </html>
